[package]
name = "data2sound"
description = "A library to convert data to sound, and vice versa (dependency-free)"
version = "0.2.0"
rust-version = "1.56.1"
edition = "2021"
authors = ["TheAwiteb <awiteb@hotmail.com>"]
repository = "https://github.com/TheAwiteb/data2sound"
documentation = "https://docs.rs/data2sound"
license = "MIT"
readme = "README.md"
keywords = ["Audio", "CLI", "WAV", "Encode", "Decode"]
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.release]
opt-level = 's' # I don't know what this does, but it's make the binary smaller and faster, so I'll keep it.
lto = true # Link-time optimization.
debug = false # Disable debug info.
codegen-units = 1 # Use a single codegen unit.
panic = "abort" # Use abort instead of unwind.
strip = true # Strip symbols.
